--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </ol>
     </div>
     <div>
-      <table>
+      <table id="roundBorder">
         <tr>
           <th colspan="2">1</th>
           <th>2</th>
@@ -32,6 +32,7 @@
           <td>
             <a href="https://www.youtube.com/watch?v=iik25wqIuFo">
               <img
+                id="imggg"
                 src="https://images.emojiterra.com/openmoji/v13.1/512px/25aa.png"
                 alt="black square"
               />
@@ -46,6 +47,7 @@
           <td>
             <a href="https://www.youtube.com/watch?v=iik25wqIuFo">
               <img
+                id="imggg"
                 src="https://images.emojiterra.com/openmoji/v13.1/512px/25aa.png"
                 alt="black square"
               />
@@ -60,6 +62,7 @@
           <td>
             <a href="https://www.youtube.com/watch?v=iik25wqIuFo">
               <img
+                id="imggg"
                 src="https://images.emojiterra.com/openmoji/v13.1/512px/25aa.png"
                 alt="black square"
               />
@@ -74,6 +77,7 @@
           <td>
             <a href="https://www.youtube.com/watch?v=iik25wqIuFo">
               <img
+                id="imggg"
                 src="https://images.emojiterra.com/openmoji/v13.1/512px/25aa.png"
                 alt="black square"
               />
@@ -122,16 +126,16 @@
 
         CSS EXERCISES
 
-        11) Give a maximum width to the body and center it into the page
-        12) Set every h1 to be centered
-        13) Change the color of each link in the page
-        14) Create a class with a border assigned to it
-        15) Set the previously created table to have rounded corners
-        16) Add a margin between every paragraph
-        17) Create a class which changes font size and text weight when applied
-        18) Create a class to hide a piece of content
-        19) Add a green border to each <td>
-        20) Add a dotted red border to each <tr> (note: <tr> does not accept a border property)
+        11) Give a maximum width to the body and center it into the page +
+        12) Set every h1 to be centered +
+        13) Change the color of each link in the page ?
+        14) Create a class with a border assigned to it +
+        15) Set the previously created table to have rounded corners +
+        16) Add a margin between every paragraph +
+        17) Create a class which changes font size and text weight when applied +
+        18) Create a class to hide a piece of content +
+        19) Add a green border to each <td> +
+        20) Add a dotted red border to each <tr> (note: <tr> does not accept a border property) ?
 
         JS EXERCISES
 
