--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>M1 Day10 Exercises</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="myscripts.js"></script>
+    <script src="index.js"></script>
   </head>
   <body>
-    <h1>The Title of this Page</h1>
+    <h1 id="heading?">The Title of this Page</h1>
     <h2>There is a title above me</h2>
     <div>
       <ol>
@@ -25,7 +25,6 @@
           <th>2</th>
           <th>3</th>
           <th>4</th>
-          <th>5</th>
         </tr>
         <tr>
           <td>1</td>
@@ -89,13 +88,13 @@
         </tr>
       </table>
     </div>
-    <div class="w3-container">
+    <div class="container">
       <p>
         This is a paragraph, it really is a whole pharagrap, please look closely
         and you will see a paragraph. It is really here. Look how long it is, it
         takes up so much space.
       </p>
-      <ul>
+      <ul id="emptyThis">
         <p>More Cats</p>
         <p>More Dogs</p>
         <p>More Rats</p>
